fixed hr overflow and write-form width issue

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,7 +14,7 @@ body {
     background: white;
     margin: 0;
     width: 100%;
-    min-width: 300px;
+    min-width: 320px;
     overflow-x: hidden;
 }
 
@@ -797,7 +797,7 @@ p.welcome-message {
     background-color: #b0bec5;
     width: 100%;
     min-width: 320px;
-    height: 100%;
+    /* height: 100%; */
     margin: 0 auto;
     border: 1px solid white;
     box-shadow: 0 0 20px 2px rgba(0,0,0,0.3);
@@ -2473,7 +2473,8 @@ section.review-page-container {
 .shadow-hr {
 	height: 12px;
 	border: 0;
-	box-shadow: inset 0 12px 12px -14px rgba(118, 153, 168, 0.9)
+    box-shadow: inset 0 12px 12px -14px rgba(118, 153, 168, 0.9);
+    overflow-x: hidden;
 }
 
 .thin-hr {
@@ -2485,7 +2486,7 @@ section.review-page-container {
     height: 1px;
     border: 0px;
     box-shadow: inset 1px -2px 20px -4px rgba(0,0,0,0.3);
-    box-shadow: inset 1px -2px 20px -4px rgba(118, 153, 168, 0.5)
+    box-shadow: inset 1px -2px 20px -4px rgba(118, 153, 168, 0.5);
 }
 
 .comment-input,
@@ -2909,7 +2910,7 @@ label[for="drone-make-list"] {
     }
 
     .post-content-container {
-        width: 440px;
+        /* width: 440px; */
         padding: 10px;
         margin: 0 auto;
     }
